--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,6 @@
     <body>
     	<h1>My Name: Srisakul Prateepchinda</h1>
         <p>Id: 6322771617</p>
+        <p>My country: Alabasta</p>
     </body>
 </html>
